Ensure traffic-light count is visible on test page
That is, don't scroll the traffic-light count out of view
when the number of traffic-lights exceeds the max-width of
its container. To do this I dropped the old table-based approach
and used a css flexbox. This solved a secondary traffic-light
ERB problem:
  <% @kata.lights.each do |light| %>
    <%= raw diff_traffic_light(light) %>
  <% end %>
This will generate whitespace only text nodes. These will
affect the layout. Viz, you will get whitespace between the
nodes generated from this when the page is refreshed, but
diff-traffic-lights added by Javascript when you click [test]
will _not_ get whitespace.

--- a/app/assets/stylesheets/kata.scss
+++ b/app/assets/stylesheets/kata.scss
@@ -54,27 +54,40 @@
     &::-webkit-scrollbar:vertical { width: 0px; }
   }
 
+  #traffic-lights-count-box {
+    vertical-align:top;
+           display:inline-block;
+             float:left;
+  }
   #traffic-lights
   {
-        margin: 0px;
-         width: 890px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    &::-webkit-scrollbar:horizontal { height: 0px; }
-
+       display:flex;
+         float:left;
+        margin:0px;
+     max-width:857px;
+    overflow-x:auto;
+    overflow-y:hidden;
+    &::-webkit-scrollbar:horizontal { height:0px; }
     .diff-traffic-light
     {
-      padding: { left: 0px; bottom: 0px; }
-      img { width: 21px; height: 21px; }
+      padding:0px;
+       margin:0px;
+      img
+      {
+          width:21px;
+         height:21px;
+        padding:0px;
+         margin:1px;
+      }
     }
   }
 
   .file_content
   {
-    overflow-x: auto;
-    overflow-y: auto;
-    &::-webkit-scrollbar:vertical   {  width: 7px; }
-    &::-webkit-scrollbar:horizontal { height: 0px; }
+    overflow-x:auto;
+    overflow-y:auto;
+    &::-webkit-scrollbar:vertical   {  width:7px; }
+    &::-webkit-scrollbar:horizontal { height:0px; }
   }
 }
 
